--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header></header>
+    <main>
+        <section id="home"></section>
+        <section id="about"></section>
+        <section id="about"></section>
+    </main>
+    <footer></footer>
 </body>
 </html>
