--- a/index.html
+++ b/index.html
@@ -3,10 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <!--Adding Logo-->
+        <div id="logoContainer">
+            <img width="40" src="./merry167-attachments/Symbole_blanc.png" alt="logo">
+        </div>
+         <!--Adding HyperLinks-->
+        <nav>
+            <h4>IM Company</h4>
+            <h4>Acquisition Options</h4>
+            <h4>My 360 Space</h4>
+        </nav>
+        <!--Adding Search Bar-->
+        <div id="searchContainer">
+            <input type="text" id="searchInput" placeholder="Search...">
+            <button id="searchButton">Search</button>
+        </div>
+        <!--Adding change Language-->
+        <div>
+            <button value="Fr">Fr</button>
+            <span>/</span>
+            <button value="En">En</button>
+        </div>
+    </header>
     <main>
         <section id="home"></section>
         <section id="about"></section>
