--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         </div>
     </header>
     <main>
-        <section id="home"></section>
+        <section id="home">
+            <div id="background-blob"></div>
+        </section>
         <section id="about"></section>
         <section id="about"></section>
     </main>
