--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </header>
     <main>
-        <section id="home">
+        <section class="home">
             <div id="background-blob"></div>
         </section>
         <section id="about"></section>
