--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
     <main>
         <section class="home">
             <div id="background-blob"></div>
+            <div class="center-header1">
+                <h1>Your Dream Cars Await</h1>
+                <h2>Drive Your Dreams, Powered by Trust.</h2>
+            </div>
         </section>
         <section id="about"></section>
         <section id="about"></section>
