--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <section class="home">
             <div id="background-blob"></div>
             <div class="center-header1">
-                <h1>Your Dream Cars Await</h1>
+                <h1>Your Dream Cars Awaits</h1>
                 <h2>Drive Your Dreams, Powered by Trust.</h2>
             </div>
         </section>
