--- a/index.html
+++ b/index.html
@@ -37,8 +37,13 @@
         <section class="home">
             <div id="background-blob"></div>
             <div class="center-header1">
-                <h1>Your Dream Cars Awaits</h1>
-                <h2>Drive Your Dreams, Powered by Trust.</h2>
+                <h2>Expert Car Repair Solutions</h4>
+                <h1>Your Dream Car <br>Awaits Restoration</h1>
+                <p>At Int'l Motor, we bring your vehicles back to life with precision, care, and expertise. Whether it's a routine service or a complete restoration, our skilled technicians ensure every car gets the attention it deserves. Trust us to keep your car running like new and looking its absolute best.</p>
+                <div class="btnContainer">
+                    <button>Book Your Service</button>
+                    <button>Get a Free Quote</button>
+                </div>
             </div>
         </section>
         <section id="about"></section>
