--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <img src="./Assets/photos/Symbole_blanc.png" alt="logo">
         </div>
          <!--Adding HyperLinks-->
-        <nav>
+        <!-- <nav>
             <h4>About Us</h4>
             <h4>Acquisition Options</h4>
             <h4>My 360 Space</h4>
-        </nav>
+        </nav> -->
         <!--Adding Search Bar-->
         <div id="searchContainer">
             <input type="text" id="searchInput" placeholder="Search...">
@@ -30,19 +30,21 @@
         </div>
         <!--Adding change Language-->
         <div class="language-opts">
-            <button value="Fr">Fr</button>
-            <button value="En">En</button>
-        </div>
-        <div id="hamburger"></div>
-                <details>
-                    <summary>Menu</summary>
-                    <details><summary>About Us</summary>
-                    </details>
-                    <details><summary>Acquisition Options</summary></details>
-                    <details><summary>My 360 Space</summary></details>
-                </details>
+            <div>
+                <button value="Fr">Fr</button>
+                <button value="En">En</button>
             </div>
+            <i class="ri-menu-4-line"></i>
+        </div>
     </header>
+    <div id="full">
+        <h1><a href="#">Home</a></h1>
+        <h1><a href="#work" title="Work">Work</a></h1>
+        <h1><a href="#">About Me</a></h1>
+        <h1><a href="#">Project</a></h1>
+        <h1><a href="#">Contact Us</a></h1>
+        <i class="ri-close-line magnet-target"></i>
+    </div>
     <main>
         <section class="home">
             <div id="background-blob"></div>
@@ -59,5 +61,7 @@
         <section id="about"></section>
     </main>
     <footer></footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
