--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <!--Adding Logo-->
         <div id="logoContainer">
-            <a href=""><img src="./Assets/photos/Symbole_blanc.png" alt="logo"></a>
+            <a href=""><img src="./Assets/photos/3.Logo_Horizontale_Blanc_sanstagline.png" alt="logo"></a>
         </div>
         <!--Adding Search Bar-->
         <div id="searchContainer">
