--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="language">
                     <!-- <button value="Fr">Fr</button>/
                     <button value="En">En</button> -->
-                    <h3><span class="fre">FR</span> / <span class="eng">EN</span></h3>
+                    <h3><span id="fre">FR</span> / <span id="eng">EN</span></h3>
                 </div>
                 <i class="ri-menu-4-line"></i>
             </div>
