--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
             </div>
         </section>
-        <section id="second">
+        <section class="second">
 
         </section>
         <section id="about"></section>
