--- a/index.html
+++ b/index.html
@@ -57,7 +57,13 @@
             </div>
         </section>
         <section id="second">
-
+            <div class="center-header2">
+                <h2>Our <span>Expert Team</span> <br>Influences <span>Your Success</span></h2>
+                <p>At <span>Int'l Motor</span>, our <span>team of experts</span> has <span>worked together</span> for over <span>30 years</span> to create the <span>best vehicles</span> for <span>everyone</span>. Our <span>passionate</span> and <span> dedicated</span> staff ensures that every car meets the <span>highest standards</span> for <span>performance</span> and <span>appearance</span>.</p>
+                <div class="btnContainer">
+                    <button>Meet Our Team</button>
+                </div>
+            </div>
         </section>
         <section id="about"></section>
     </main>
