--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                 </div>
             </div>
         </header>
+        <div id="full" class="z-20 fixed h-full top-0 right-0 w-3/12 bg-[#17151a]">
+            <i class="ri-close-line magnet-target text-4xl absolute top-5 right-5"></i>
+        </div>
         <main class="bg-[#0C0712]">
             <section id="home" class="relative h-screen w-full">
                 <video autoplay muted loop src="./Assets/videos/4489807-uhd_4096_2160_25fps.mp4" class="brightness-50 h-full w-full object-cover"></video>
