--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 </div>
             </div>
         </header>
-        <div id="full" class="z-20 fixed h-full top-0 right-0 w-3/12 bg-[#17151a]">
-            <i class="ri-close-line magnet-target text-4xl absolute top-5 right-5"></i>
+        <div id="full" class="z-20 fixed h-full top-0 right-0 w-3/12 bg-[#17151a] translate-x-full">
+            <i class="ri-close-line magnet-target text-3xl absolute top-5 right-5 cursor-pointer"></i>
         </div>
         <main class="bg-[#0C0712]">
             <section id="home" class="relative h-screen w-full">
@@ -65,6 +65,7 @@
             </section>
         </main>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
     <script src="script.js"></script>
 </body>
 
