--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <div id="cursor" class="h-5 w-5 rounded-full bg-purple-600 mix-blend-difference fixed top-0 left-0 z-40"></div>
     <div id="main" class="h-full w-full text-white">
         <header class="fixed top-0 left-0 w-full flex items-center justify-between py-4 px-8 z-10 max-sm:px-6">
             <div id="logo" class="h-12 max-md:h-7 max-sm:h-6">
