--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ C 459.33 229.68 475.12 245.77 484.70 267.30 C 494.28 288.84 512.40 302.40 517.00
                     </div>
                 </div>
             </div>
-            <div class="py-6 text-sm text-center text-gray-400 dark:text-gray-600">© 1968 Company Co. All rights reserved.</div>
+            <div class="py-6 text-sm text-center text-gray-400 dark:text-gray-600">© 2024 INT's MOTOR Co. All rights reserved.</div>
         </footer>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
