--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                             </div>
                             <div class="flex flex-col items-center justify-center p-8 rounded-b-lg dark:bg-violet-600 dark:bg-violet-600 dark:bg-violet-600 dark:bg-violet-600 dark:text-gray-50 dark:text-gray-50 dark:text-gray-50 dark:text-gray-50">
                                 <img src="https://source.unsplash.com/50x50/?portrait?1" alt="" class="w-16 h-16 mb-2 -mt-16 bg-center bg-cover rounded-full dark:bg-gray-500 dark:bg-gray-500 dark:bg-gray-500 dark:bg-gray-500 dark:bg-gray-300 dark:bg-gray-300 dark:bg-gray-300 dark:bg-gray-300">
-                                <p class="text-xl font-semibold leading-tight">Distinctio Animi</p>
-                                <p class="text-sm uppercase">Aliquam illum</p>
+                                <p class="text-xl font-semibold leading-tight">Person1</p>
+                                <p class="text-sm uppercase">Consumer</p>
                             </div>
                         </div>
                         <div class="flex flex-col max-w-sm mx-4 my-6 shadow-lg">
@@ -111,8 +111,8 @@
                             </div>
                             <div class="flex flex-col items-center justify-center p-8 rounded-b-lg dark:bg-violet-600 dark:bg-violet-600 dark:bg-violet-600 dark:bg-violet-600 dark:text-gray-50 dark:text-gray-50 dark:text-gray-50 dark:text-gray-50">
                                 <img src="https://source.unsplash.com/50x50/?portrait?2" alt="" class="w-16 h-16 mb-2 -mt-16 bg-center bg-cover rounded-full dark:bg-gray-500 dark:bg-gray-500 dark:bg-gray-500 dark:bg-gray-500 dark:bg-gray-300 dark:bg-gray-300 dark:bg-gray-300 dark:bg-gray-300">
-                                <p class="text-xl font-semibold leading-tight">Distinctio Animi</p>
-                                <p class="text-sm uppercase">Aliquam illum</p>
+                                <p class="text-xl font-semibold leading-tight">Person2</p>
+                                <p class="text-sm uppercase">Consumer</p>
                             </div>
                         </div>
                         <div class="flex flex-col max-w-sm mx-4 my-6 shadow-lg">
@@ -130,8 +130,8 @@
                             </div>
                             <div class="flex flex-col items-center justify-center p-8 rounded-b-lg dark:bg-violet-600 dark:bg-violet-600 dark:bg-violet-600 dark:bg-violet-600 dark:text-gray-50 dark:text-gray-50 dark:text-gray-50 dark:text-gray-50">
                                 <img src="https://source.unsplash.com/50x50/?portrait?3" alt="" class="w-16 h-16 mb-2 -mt-16 bg-center bg-cover rounded-full dark:bg-gray-500 dark:bg-gray-500 dark:bg-gray-500 dark:bg-gray-500 dark:bg-gray-300 dark:bg-gray-300 dark:bg-gray-300 dark:bg-gray-300">
-                                <p class="text-xl font-semibold leading-tight">Distinctio Animi</p>
-                                <p class="text-sm uppercase">Aliquam illum</p>
+                                <p class="text-xl font-semibold leading-tight">Person3</p>
+                                <p class="text-sm uppercase">Consumer</p>
                             </div>
                         </div>
                         <div class="flex flex-col max-w-sm mx-4 my-6 shadow-lg">
@@ -149,8 +149,8 @@
                             </div>
                             <div class="flex flex-col items-center justify-center p-8 rounded-b-lg dark:bg-violet-600 dark:bg-violet-600 dark:bg-violet-600 dark:bg-violet-600 dark:text-gray-50 dark:text-gray-50 dark:text-gray-50 dark:text-gray-50">
                                 <img src="https://source.unsplash.com/50x50/?portrait?4" alt="" class="w-16 h-16 mb-2 -mt-16 bg-center bg-cover rounded-full dark:bg-gray-500 dark:bg-gray-500 dark:bg-gray-500 dark:bg-gray-500 dark:bg-gray-300 dark:bg-gray-300 dark:bg-gray-300 dark:bg-gray-300">
-                                <p class="text-xl font-semibold leading-tight">Distinctio Animi</p>
-                                <p class="text-sm uppercase">Aliquam illum</p>
+                                <p class="text-xl font-semibold leading-tight">Person4</p>
+                                <p class="text-sm uppercase">Consumer</p>
                             </div>
                         </div>
                     </div>
