--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
                         Whether you're buying or
                         selling, our expert team ensures every car meets the highest standards for performance and
                         appearance.</p>
-                    <button class="py-2 px-6 border-2 rounded-lg max-sm:text-sm">Book Free Consultation</button>
+                        <button class="border-2 border-purple-600 rounded-lg px-3 py-2 text-purple-400 cursor-pointer hover:bg-purple-600 hover:text-purple-200">
+                            Browse
+                        </button>
                 </div>
             </section>
             <section class="h-screen">
