--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         <main class="bg-[#0C0712]">
             <section id="home" class="relative h-screen w-full">
-                <video autoplay muted loop src="./Assets/videos/4489807-uhd_4096_2160_25fps.mp4"
+                <video autoplay muted loop src="./Assets/videos/istockphoto-1221801611-640_adpp_is.mp4"
                     class="brightness-50 h-full w-full object-cover"></video>
                 <div id="home-container"
                     class="flex items-center justify-center flex-col h-screen w-full absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">
@@ -74,7 +74,7 @@
 
             </section>
             <section class="testimonials">
-                <section class="py-8">
+                <section class="py-10">
                     <div class="container flex flex-col items-center mx-auto md:p-10 md:px-12">
                         <h1 class="p-4 text-6xl font-semibold leading-none text-center font-[font3]"
                             data-translate="testimonialsTitle">What our customers are saying about us</h1>
@@ -197,55 +197,55 @@
                 </div>
                 <div class="grid grid-cols-2 text-sm gap-x-3 gap-y-8 lg:w-2/3 sm:grid-cols-4">
                     <div class="space-y-3">
-                        <h3 class="tracking-wide uppercase text-gray-50 dark:text-gray-900">About us</h3>
+                        <h3 class="tracking-wide uppercase text-gray-300 font-[font1]">About us</h3>
                         <ul class="space-y-1">
                             <li>
-                                <a rel="noopener noreferrer" href="#">Official Press Releases</a>
+                                <a rel="noopener noreferrer" class="font-[font3]" href="#">Official Press Releases</a>
                             </li>
                             <li>
-                                <a rel="noopener noreferrer" href="#">Careers</a>
+                                <a rel="noopener noreferrer" class="font-[font3]" href="#">Careers</a>
                             </li>
                             <li>
-                                <a rel="noopener noreferrer" href="#">Contact Information</a>
+                                <a rel="noopener noreferrer" class="font-[font3]" href="#">Contact Information</a>
                             </li>
                             <li>
-                                <a rel="noopener noreferrer" href="#">FAQ</a>
+                                <a rel="noopener noreferrer" class="font-[font3]" href="#">FAQ</a>
                             </li>
                         </ul>
                     </div>
                     <div class="space-y-3">
-                        <h3 class="tracking-wide uppercase text-gray-50 dark:text-gray-900">Acquisition Options</h3>
+                        <h3 class="tracking-wide uppercase text-gray-300 font-[font1]">Acquisition Options</h3>
                         <ul class="space-y-1">
                             <li>
-                                <a rel="noopener noreferrer" href="#">Business Options</a>
+                                <a rel="noopener noreferrer" class="font-[font3]" href="#">Business Options</a>
                             </li>
                             <li>
-                                <a rel="noopener noreferrer" href="#">Personal Options</a>
+                                <a rel="noopener noreferrer" class="font-[font3]" href="#">Personal Options</a>
                             </li>
                             <li>
-                                <a rel="noopener noreferrer" href="#">Public Sector Options</a>
+                                <a rel="noopener noreferrer" class="font-[font3]" href="#">Public Sector Options</a>
                             </li>
                         </ul>
                     </div>
                     <div class="space-y-3">
-                        <h3 class="uppercase text-gray-50 dark:text-gray-900">My 360 Space</h3>
+                        <h3 class="uppercase text-gray-300 font-[font1]">My 360 Space</h3>
                         <ul class="space-y-1">
                             <li>
-                                <a rel="noopener noreferrer" href="#">Insurance</a>
+                                <a rel="noopener noreferrer" class="font-[font3]" href="#">Insurance</a>
                             </li>
                             <li>
-                                <a rel="noopener noreferrer" href="#">Maintenance & Installation</a>
+                                <a rel="noopener noreferrer" class="font-[font3]" href="#">Maintenance & Installation</a>
                             </li>
                             <li>
-                                <a rel="noopener noreferrer" href="#">Shop</a>
+                                <a rel="noopener noreferrer" class="font-[font3]" href="#">Shop</a>
                             </li>
                             <li>
-                                <a rel="noopener noreferrer" href="#">Sell My Vehicle</a>
+                                <a rel="noopener noreferrer" class="font-[font3]" href="#">Sell My Vehicle</a>
                             </li>
                         </ul>
                     </div>
                     <div class="space-y-3">
-                        <div class="uppercase text-gray-50 dark:text-gray-900">Social media</div>
+                        <div class="uppercase text-gray-300 font-[font1]">Social media</div>
                         <div class="flex justify-start space-x-3">
                             <a rel="noopener noreferrer" href="#" title="Facebook" class="flex items-center p-1">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 32 32"
@@ -256,13 +256,7 @@
                                 </svg>
                             </a>
                             <a rel="noopener noreferrer" href="#" title="X" class="flex items-center p-1">
-                                <?xml version="1.0" ?><svg xmlns="http://www.w3.org/2000/svg"
-                                    xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" width="24px"
-                                    height="24px" viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;"
-                                    xml:space="preserve">
-                                    <path
-                                        d="M14.095479,10.316482L22.286354,1h-1.940718l-7.115352,8.087682L7.551414,1H1l8.589488,12.231093L1,23h1.940717  l7.509372-8.542861L16.448587,23H23L14.095479,10.316482z M11.436522,13.338465l-0.871624-1.218704l-6.924311-9.68815h2.981339  l5.58978,7.82155l0.867949,1.218704l7.26506,10.166271h-2.981339L11.436522,13.338465z" />
-                                </svg>
+                                <i class="ri-twitter-x-line text-xl"></i>
                             </a>
                             <a rel="noopener noreferrer" href="#" title="Instagram" class="flex items-center p-1">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" fill="currentColor"
