--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <img src="./Assets/photos/3.Logo_Horizontale_Blanc_sanstagline.png" alt="" class="h-full object-cover">
             </div>
             <nav class="flex items-center gap-5 max-md:hidden">
-                <h4 data-translate="aboutUs">About Us</h4>
-                <h4 data-translate="acquisitionOptions">Acquisition Options</h4>
-                <h4 data-translate="space360">360 space</h4>
+                <h4 data-translate="aboutUs" class="cursor-pointer">About Us</h4>
+                <h4 data-translate="acquisitionOptions" class="cursor-pointer">Acquisition Options</h4>
+                <h4 data-translate="space360" class="cursor-pointer">360 space</h4>
             </nav>
             <div class="flex items-center gap-4">
                 <div id="searchContainer" class="flex items-start justify-center gap-2">
