--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="cursor"
         class="h-5 w-5 rounded-full bg-purple-600 mix-blend-difference fixed top-0 left-0 z-40 max-lg:hidden"></div>
     <div id="main" class="h-full w-full text-white">
-        <header class="fixed top-0 left-0 w-full flex items-center justify-between py-4 px-8 z-10 max-sm:px-6">
+        <header class=" fixed top-0 left-0 w-full flex items-center justify-between py-4 px-8 z-10 max-sm:px-6">
             <div id="logo" class="h-12 max-md:h-7 max-sm:h-[1.6rem]">
                 <img src="./Assets/photos/3.Logo_Horizontale_Blanc_sanstagline.png" alt="" class="h-full object-cover">
             </div>
@@ -61,6 +61,7 @@
                         Your Dream Car<br>
                         Awaits You</h1>
                     <p
+                    data-translate="homeText"
                         class="text-center w-1/2 font-[font3] text-zinc-300 my-6 max-md:text-lg max-md:w-3/5 max-sm:text-sm">
                         At INT'l Motor, we provide tailored vehicle acquisition solutions for personal or professional needs. From cars to machinery, our expert team ensures top-quality service with integrity and excellence.</p>
                     <button class="py-2 px-6 border-2 rounded-lg max-sm:text-sm">Book Free Consultation</button>
@@ -82,30 +83,27 @@
                                 <div class="w-full flex-col justify-center items-start gap-8 flex">
                                     <div class="w-full flex-col justify-start lg:items-start items-center gap-3 flex">
                                         <h2
-                                            class="text-gray-900 text-4xl font-bold font-manrope leading-normal lg:text-start text-center">
+                                        data-translate="aboutHeading"
+                                            class="text-white text-5xl font-semibold font-manrope leading-none lg:text-start text-center font-[font1]">
                                             Integrity and Excellence in all our work.</h2>
-                                        <p class="text-gray-500 text-base font-normal leading-relaxed lg:text-start text-center">
+                                        <p data-translate="aboutHeadingText" class="text-gray-300 text-base font-normal leading-relaxed lg:text-start text-center">
                                             Every endeavor at Int'l Motor has been a team-driven journey, where each individual has contributed to our success. Together, we've not only facilitated vehicle acquisitions but also built lasting relationships that define the essence of our business.    
                                         </div>
                                     <div class="w-full lg:justify-start justify-center items-center sm:gap-10 gap-5 inline-flex">
                                         <div class="flex-col justify-start items-start inline-flex">
-                                            <h3 class="text-gray-900 text-4xl font-bold font-manrope leading-normal">0+</h3>
+                                            <h3 class="text-zinc-400 text-4xl font-bold font-manrope leading-normal">0+</h3>
                                             <h6 class="text-gray-500 text-base font-normal leading-relaxed">Years of Experience</h6>
                                         </div>
                                         <div class="flex-col justify-start items-start inline-flex">
-                                            <h4 class="text-gray-900 text-4xl font-bold font-manrope leading-normal">0+</h4>
+                                            <h4 class="text-zinc-400 text-4xl font-bold font-manrope leading-normal">0+</h4>
                                             <h6 class="text-gray-500 text-base font-normal leading-relaxed">Successful Deals</h6>
                                         </div>
                                         <div class="flex-col justify-start items-start inline-flex">
-                                            <h4 class="text-gray-900 text-4xl font-bold font-manrope leading-normal">0+</h4>
+                                            <h4 class="text-zinc-400 text-4xl font-bold font-manrope leading-normal">0+</h4>
                                             <h6 class="text-gray-500 text-base font-normal leading-relaxed">Happy Clients</h6>
                                         </div>
                                     </div>
                                 </div>
-                                <button
-                                    class="sm:w-fit w-full px-3.5 py-2 bg-indigo-600 hover:bg-indigo-800 transition-all duration-700 ease-in-out rounded-lg shadow-[0px_1px_2px_0px_rgba(16,_24,_40,_0.05)] justify-center items-center flex">
-                                    <span class="px-1.5 text-white text-sm font-medium leading-6">Read More</span>
-                                </button>
                             </div>
                         </div>
                     </div>
