--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <button class="py-2 px-6 border-2 rounded-lg max-sm:text-sm">Discover our brokerage solutions</button>
                 </div>
             </section>
-            <section class="About-us">
+            <!-- <section class="About-us">
                 <section class="py-24 relative">
                     <div class="w-full max-w-7xl px-4 md:px-5 lg:px-5 mx-auto">
                         <div class="w-full justify-start items-center gap-12 grid lg:grid-cols-2 grid-cols-1">
@@ -110,6 +110,92 @@
                     </div>
                 </section>
                                                         
+            </section> -->
+            <section class="about-us">
+                <div class="max-w-7xl mx-auto p-6">
+                <div class="text-center mb-8">
+                    <p class="text-gray-500">
+                    About Our Company
+                    </p>
+                    <h1 class="text-4xl font-bold mt-2">
+                        Innovative solution designed to revolutionize the way of acquiring a vehicle
+                    </h1>
+                </div>
+                <div class="flex justify-center space-x-8 mb-8">
+                    <div class="text-center">
+                    <p class="text-3xl font-bold text-blue-600">
+                    1k+
+                    </p>
+                    <p class="text-gray-500">
+                    Deal with Clients
+                    </p>
+                    </div>
+                    <div class="text-center">
+                    <p class="text-3xl font-bold text-blue-600">
+                    99%
+                    </p>
+                    <p class="text-gray-500">
+                    Happy Customers
+                    </p>
+                    </div>
+                    <div class="text-center">
+                    <p class="text-3xl font-bold text-blue-600">
+                    1k+
+                    </p>
+                    <p class="text-gray-500">
+                    Deals Locked
+                    </p>
+                    </div>
+                </div>
+                <div class="flex flex-col lg:flex-row lg:space-x-8">
+                    <div class="lg:w-1/2 mb-8 lg:mb-0">
+                    <img alt="Two people discussing a project in an office setting" class="rounded-lg w-full" height="400" src="https://storage.googleapis.com/a1aa/image/5GYbAq9jf7wCciYgc9rnnFf6eYs6DmyebpjtOcO0b8AfqFrfE.jpg" width="600"/>
+                    </div>
+                    <div class="lg:w-1/2 space-y-6">
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                    <div class="bg-blue-50 p-6 rounded-lg">
+                    <h2 class="text-xl font-bold mb-2">
+                        Ad Campaign Strategies
+                    </h2>
+                    <p class="text-gray-600 mb-4">
+                        Our ad campaign strategies are designed to maximize your brand's reach and impact, ensuring effective engagement and measurable results.
+                    </p>
+                    <button class="text-blue-600 font-semibold">
+                        Read More
+                        <i class="fas fa-arrow-right">
+                        </i>
+                    </button>
+                    </div>
+                    <div class="bg-gray-50 p-6 rounded-lg">
+                    <h2 class="text-xl font-bold mb-2">
+                        Content Strategy
+                    </h2>
+                    <p class="text-gray-600 mb-4">
+                        Our content strategy focuses on creating engaging, relevant material that drives audience interaction and supports your business goals.
+                    </p>
+                    <button class="text-blue-600 font-semibold">
+                        Read More
+                        <i class="fas fa-arrow-right">
+                        </i>
+                    </button>
+                    </div>
+                    </div>
+                    <div class="bg-blue-50 p-6 rounded-lg">
+                    <h2 class="text-xl font-bold mb-2">
+                    Business Scaling
+                    </h2>
+                    <p class="text-gray-600 mb-4">
+                    Our expert strategies in business scaling help you expand your operations efficiently, ensuring sustainable growth and increased market presence. Partner with us to elevate your business to new heights.
+                    </p>
+                    <button class="text-blue-600 font-semibold">
+                    Read More
+                    <i class="fas fa-arrow-right">
+                    </i>
+                    </button>
+                    </div>
+                    </div>
+                </div>
+                </div>
             </section>
             <section class="testimonials">
                 <section class="py-10">
