--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div class="bg-blue-50 p-6 rounded-lg">
                     <h2 class="text-xl font-bold mb-2">
-                        Ad Campaign Strategies
+                        About Company
                     </h2>
                     <p class="text-gray-600 mb-4">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad rem molestiae placeat nihil laudantium. Commodi quasi, illo magnam laboriosam quo, quas error, voluptatibus sed soluta nulla dignissimos veritatis doloribus unde.
+                        Int'l Motor is an international brokerage company that provides unique vehicle acquisition solutions for personal or professional use
                     </p>
                     <button class="text-blue-600 font-semibold">
                         Read More
@@ -124,10 +124,10 @@
                     </div>
                     <div class="bg-gray-50 p-6 rounded-lg">
                     <h2 class="text-xl font-bold mb-2">
-                        Content Strategy
+                        Commitment
                     </h2>
                     <p class="text-gray-600 mb-4">
-                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, distinctio id tenetur deleniti excepturi libero.
+                        With exceptional brokerage solutions and exclusive client projects, our company writes its story with Integrity and Excellence.
                     </p>
                     <button class="text-blue-600 font-semibold">
                         Read More
@@ -138,10 +138,12 @@
                     </div>
                     <div class="bg-blue-50 p-6 rounded-lg">
                     <h2 class="text-xl font-bold mb-2">
-                    Business Scaling
+                    Our Mission
                     </h2>
                     <p class="text-gray-600 mb-4">
-                    Our expert strategies in business scaling help you expand your operations efficiently, ensuring sustainable growth and increased market presence. Partner with us to elevate your business to new heights.
+                        Thanks to its resources, it aims to ensure and
+                        provide its clients with the best acquisition service on the market. Whether it involves acquiring new or used vehicles, construction or agricultural
+                        machinery, utility vehicles, motorcycles, special vehicles, or catering to private individuals, Int'l Motor meets your tailored needs.
                     </p>
                     <button class="text-blue-600 font-semibold">
                     Read More
